--- a/newsite/site20/b01_new.html
+++ b/newsite/site20/b01_new.html
@@ -5,5 +5,5 @@ left: 391px;
 top: 212px;
 }
 </style>
-<video controls id=mov_home_reel ><source src="../phil_assets/Home Page/homePage_reel.mov" /></video>
+<video controls id=mov_home_reel ><source src="../phil_assets1/Home Page/homePage_reel.mov" /></video>
 </body></html>
