--- a/newsite/site20/c01.html
+++ b/newsite/site20/c01.html
@@ -1,318 +1,352 @@
-<html>
-<head>
-</head>
-<body>
-<style>
-#cmary {
-position: absolute;left: 939px;
-top: 242px;
-z-index: 0;
-}
-</style>
-<a href="c03.html"><img id=cmary src="assets/main/C/c_mary.png" onmouseover="" onmouseout=""  />
-</a><style>
-#c1m {
-position: absolute;left: 406px;
-top: 242px;
-z-index: 0;
-}
-</style>
-<img id=c1m src="assets/main/C/c01_main.png" />
-<style>
-#gsbr {
-position: absolute;left: 391px;
-top: 215px;
-z-index: 0;
-}
-</style>
-<img id=gsbr src="assets/main/assets_general/stationary/semiborder_r.png" />
-<style>
-#gagr {
-position: absolute;left: 880px;
-top: 496px;
-z-index: 0;
-}
-</style>
-<a href="link.html"><img id=gagr src="assets/main/assets_general/moving/arrow_r_g.png" onmouseover="" onmouseout=""  />
-</a><style>
-#dint {
+<html><body>
+<style>#dint {
 position: absolute;left: 738px;
 top: 560px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<a href="m01_1.html"><img id=dint src="assets/margin_bottom/assets_deselected/d_interactive.png" onmouseover="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_selected/s_interactive.png'" onmouseout="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_deselected/d_interactive.png'"  />
-</a><style>
+#dint.hover { border: 1px dashed #333; }
 #au {
 position: absolute;left: 121px;
 top: 161px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<img id=au src="assets/margin_left/assets_deselected/aboutus.png" />
-<style>
+#au.hover { border: 1px dashed #333; }
 #swwa {
 position: absolute;left: 139px;
 top: 227px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<img id=swwa src="assets/margin_left/assets_selected/s_whoweare.png" />
-<style>
+#swwa.hover { border: 1px dashed #333; }
 #logo {
 position: absolute;left: 106px;
 top: 77px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<img id=logo src="assets/margin_left/assets_deselected/logo.png" />
-<style>
-#conline {
-position: absolute;left: 138px;
-top: 394px;
-z-index: 0;
-visibility: hidden;
-}
-</style>
-<img id=conline src="assets/main/assets_general/moving/underline.png" />
-<style>
+#logo.hover { border: 1px dashed #333; }
 #dwv {
 position: absolute;left: 139px;
 top: 206px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<a href="b01.html"><img id=dwv src="assets/margin_left/assets_deselected/d_watchvideo.png" onmouseover="document.getElementById('dwvline').style.visibility='visible';document.getElementById('dwvline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dwvline').style.visibility='hidden';"  />
-</a><style>
-#dcd {
-position: absolute;left: 139px;
-top: 383px;
-z-index: 0;
-}
-</style>
-<a href="g01.html"><img id=dcd src="assets/margin_left/assets_deselected/d_contactdetails.png" onmouseover="document.getElementById('conline').style.visibility='visible';document.getElementById('conline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('conline').style.visibility='hidden';"  />
-</a><style>
+#dwv.hover { border: 1px dashed #333; }
 #lm {
 position: absolute;left: 1096px;
 top: 132px;
-z-index: 1;
+z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<a href="o01.html"><img id=lm src="assets/margin_top/learnmore.png" onmouseover="" onmouseout=""  />
-</a><style>
+#lm.hover { border: 1px dashed #333; }
 #ts {
 position: absolute;left: 616px;
 top: 72px;
-z-index: 1;
+z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<a href="o01.html"><img id=ts src="assets/margin_top/text_sneak.png" onmouseover="" onmouseout=""  />
-</a><style>
+#ts.hover { border: 1px dashed #333; }
 #dcom {
 position: absolute;left: 139px;
 top: 426px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<a href="i01.html"><img id=dcom src="assets/margin_left/assets_deselected/d_community.png" onmouseover="document.getElementById('dcomline').style.visibility='visible';document.getElementById('dcomline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dcomline').style.visibility='hidden';"  />
-</a><style>
+#dcom.hover { border: 1px dashed #333; }
 #td {
 position: absolute;left: 1006px;
 top: 86px;
-z-index: 1;
+z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<a href="o01.html"><img id=td src="assets/margin_top/text_descr.png" onmouseover="" onmouseout=""  />
-</a><style>
+#td.hover { border: 1px dashed #333; }
 #dan {
 position: absolute;left: 279px;
 top: 560px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<a href="k01.html"><img id=dan src="assets/margin_bottom/assets_deselected/d_animation.png" onmouseover="document.getElementById('dan').style.visibility='visible';document.getElementById('dan').src='assets/margin_bottom/assets_selected/s_animation.png'" onmouseout="document.getElementById('dan').style.visibility='visible';document.getElementById('dan').src='assets/margin_bottom/assets_deselected/d_animation.png'"  />
-</a><style>
-#dcomline {
-position: absolute;left: 138px;
-top: 438px;
-z-index: 0;
-visibility: hidden;
-}
-</style>
-<img id=dcomline src="assets/main/assets_general/moving/underline.png" />
-<style>
+#dan.hover { border: 1px dashed #333; }
 #dcl {
 position: absolute;left: 139px;
 top: 292px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<a href="f01.html"><img id=dcl src="assets/margin_left/assets_deselected/d_clients.png" onmouseover="document.getElementById('dcline').style.visibility='visible';document.getElementById('dcline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dcline').style.visibility='hidden';"  />
-</a><style>
-#dphline {
-position: absolute;left: 138px;
-top: 282px;
-z-index: 0;
-visibility: hidden;
-}
-</style>
-<img id=dphline src="assets/main/assets_general/moving/underline.png" />
-<style>
+#dcl.hover { border: 1px dashed #333; }
 #wo {
 position: absolute;left: 36px;
 top: 528px;
-z-index: -1;
+z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<img id=wo src="assets/margin_bottom/assets_deselected/work.png" />
-<style>
+#wo.hover { border: 1px dashed #333; }
 #bm {
 position: absolute;left: 0px;
 top: 0px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<img id=bm src="assets/margin_top/banner_margin.png" />
-<style>
+#bm.hover { border: 1px dashed #333; }
+#dcd {
+position: absolute;left: 139px;
+top: 383px;
+z-index: 0;
+overflow: hidden;
+border: 0px;
+}
+#dcd.hover { border: 1px dashed #333; }
 #dmap {
 position: absolute;left: 139px;
 top: 405px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<a href="h01.html"><img id=dmap src="assets/margin_left/assets_deselected/d_map.png" onmouseover="document.getElementById('dmapline').style.visibility='visible';document.getElementById('dmapline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dmapline').style.visibility='hidden';"  />
-</a><style>
+#dmap.hover { border: 1px dashed #333; }
 #bs {
 position: absolute;left: 616px;
 top: 72px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<a href="o01.html"><img id=bs src="assets/margin_top/banner_sneak.png" onmouseover="" onmouseout=""  />
-</a><style>
-#dpaline {
-position: absolute;left: 138px;
-top: 260px;
-z-index: 0;
-visibility: hidden;
-}
-</style>
-<img id=dpaline src="assets/main/assets_general/moving/underline.png" />
-<style>
+#bs.hover { border: 1px dashed #333; }
 #fo {
 position: absolute;left: 616px;
 top: 717px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<img id=fo src="assets/margin_bottom/assets_deselected/footer.png" />
-<style>
+#fo.hover { border: 1px dashed #333; }
 #dmd {
 position: absolute;left: 508px;
 top: 560px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<a href="l01.html"><img id=dmd src="assets/margin_bottom/assets_deselected/d_motiondesign.png" onmouseover="document.getElementById('dmd').style.visibility='visible';document.getElementById('dmd').src='assets/margin_bottom/assets_selected/s_motiondesign.png'" onmouseout="document.getElementById('dmd').style.visibility='visible';document.getElementById('dmd').src='assets/margin_bottom/assets_deselected/d_motiondesign.png'"  />
-</a><style>
+#dmd.hover { border: 1px dashed #333; }
 #dpr {
 position: absolute;left: 49px;
 top: 560px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<a href="j01.html"><img id=dpr src="assets/margin_bottom/assets_deselected/d_previs.png" onmouseover="document.getElementById('dpr').style.visibility='visible';document.getElementById('dpr').src='assets/margin_bottom/assets_selected/s_previs.png'" onmouseout="document.getElementById('dpr').style.visibility='visible';document.getElementById('dpr').src='assets/margin_bottom/assets_deselected/d_previs.png'"  />
-</a><style>
-#dwwaline {
-position: absolute;left: 138px;
-top: 239px;
-z-index: 0;
-visibility: hidden;
-}
-</style>
-<img id=dwwaline src="assets/main/assets_general/moving/underline.png" />
-<style>
+#dpr.hover { border: 1px dashed #333; }
 #detc {
 position: absolute;left: 968px;
 top: 560px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<a href="n01.html"><img id=detc src="assets/margin_bottom/assets_deselected/d_etcetera.png" onmouseover="document.getElementById('detc').style.visibility='visible';document.getElementById('detc').src='assets/margin_bottom/assets_selected/s_etcetera.png'" onmouseout="document.getElementById('detc').style.visibility='visible';document.getElementById('detc').src='assets/margin_bottom/assets_deselected/d_etcetera.png'"  />
-</a><style>
-#dcline {
-position: absolute;left: 138px;
-top: 304px;
-z-index: 0;
-visibility: hidden;
-}
-</style>
-<img id=dcline src="assets/main/assets_general/moving/underline.png" />
-<style>
+#detc.hover { border: 1px dashed #333; }
 #dpa {
 position: absolute;left: 139px;
 top: 249px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<a href="d01.html"><img id=dpa src="assets/margin_left/assets_deselected/d_partners.png" onmouseover="document.getElementById('dpaline').style.visibility='visible';document.getElementById('dpaline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dpaline').style.visibility='hidden';"  />
-</a><style>
-#dmapline {
-position: absolute;left: 138px;
-top: 416px;
-z-index: 0;
-visibility: hidden;
-}
-</style>
-<img id=dmapline src="assets/main/assets_general/moving/underline.png" />
-<style>
-#dwvline {
-position: absolute;left: 138px;
-top: 217px;
-z-index: 0;
-visibility: hidden;
-}
-</style>
-<img id=dwvline src="assets/main/assets_general/moving/underline.png" />
-<style>
+#dpa.hover { border: 1px dashed #333; }
 #con {
 position: absolute;left: 121px;
 top: 339px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<img id=con src="assets/margin_left/assets_deselected/contact.png" />
-<style>
+#con.hover { border: 1px dashed #333; }
 #se {
 position: absolute;left: 1015px;
 top: 163px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<img id=se src="assets/margin_top/search.png" />
-<style>
+#se.hover { border: 1px dashed #333; }
 #dph {
 position: absolute;left: 139px;
 top: 270px;
 z-index: 0;
+overflow: hidden;
+border: 0px;
 }
-</style>
-<a href="e01.html"><img id=dph src="assets/margin_left/assets_deselected/d_photos.png" onmouseover="document.getElementById('dphline').style.visibility='visible';document.getElementById('dphline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dphline').style.visibility='hidden';"  />
-</a><style>
-#line {
-position: absolute;left: 138px;
-top: 239px;
+#dph.hover { border: 1px dashed #333; }
+#ss_whoweare_1 {
+ top:0px;
+ left:0px;
+ visibility:visible;
+}
+#img_c1m {
+position: absolute;
+left: 406px;
+top: 242px;
 z-index: 0;
 }
-</style>
-<img id=line src="assets/main/assets_general/moving/underline.png" />
-<style>
-#cgary {
-position: absolute;left: 939px;
+#img_cmary {
+position: absolute;
+left: 939px;
+top: 242px;
+z-index: 0;
+}
+#img_cgary {
+position: absolute;
+left: 939px;
 top: 298px;
 z-index: 0;
 }
+#img_gagr {
+position: absolute;
+left: 880px;
+top: 496px;
+z-index: 1;
+}
+#ss_whoweare_2 {
+ top:0px;
+ left:0px;
+ visibility:hidden;
+}
+#img_c2m {
+position: absolute;
+left: 406px;
+top: 242px;
+z-index: 0;
+}
+#img_gagl {
+position: absolute;
+left: 880px;
+top: 496px;
+z-index: 1;
+}
+#ss_whoweare_3 {
+ top:0px;
+ left:0px;
+ visibility:hidden;
+}
+#img_c3m {
+position: absolute;
+left: 405px;
+top: 240px;
+z-index: 0;
+}
+#img_gagr_1 {
+position: absolute;
+left: 1164px;
+top: 488px;
+z-index: 1;
+}
+#img_gxbr {
+position: absolute;
+left: 1171px;
+top: 215px;
+z-index: 1;
+}
+#ss_whoweare_4 {
+ top:0px;
+ left:0px;
+ visibility:hidden;
+}
+#img_c4m {
+position: absolute;
+left: 405px;
+top: 240px;
+z-index: 0;
+}
+#img_gagl_1 {
+position: absolute;
+left: 1164px;
+top: 488px;
+z-index: 1;
+}
+#img_gxbr_1 {
+position: absolute;
+left: 1171px;
+top: 215px;
+z-index: 1;
+}
+#ss_whoweare_5 {
+ top:0px;
+ left:0px;
+ visibility:hidden;
+}
+#img_c5m {
+position: absolute;
+left: 405px;
+top: 240px;
+z-index: 0;
+}
+#img_gxbr_2 {
+position: absolute;
+left: 1171px;
+top: 215px;
+z-index: 1;
+}
 </style>
-<a href="c05.html"><img id=cgary src="assets/main/C/c_gary.png" onmouseover="" onmouseout=""  />
-</a></body>
-</html>
+<img id=dint src="assets/margin_bottom/assets_deselected/d_interactive.png" />
+<img id=au src="assets/margin_left/assets_deselected/aboutus.png" />
+<img id=swwa src="assets/margin_left/assets_selected/s_whoweare.png" />
+<img id=logo src="assets/margin_left/assets_deselected/logo.png" />
+<img id=dwv src="assets/margin_left/assets_deselected/d_watchvideo.png" />
+<img id=lm src="assets/margin_top/learnmore.png" />
+<img id=ts src="assets/margin_top/text_sneak.png" />
+<img id=dcom src="assets/margin_left/assets_deselected/d_community.png" />
+<img id=td src="assets/margin_top/text_descr.png" />
+<img id=dan src="assets/margin_bottom/assets_deselected/d_animation.png" />
+<img id=dcl src="assets/margin_left/assets_deselected/d_clients.png" />
+<img id=wo src="assets/margin_bottom/assets_deselected/work.png" />
+<img id=bm src="assets/margin_top/banner_margin.png" />
+<img id=dcd src="assets/margin_left/assets_deselected/d_contactdetails.png" />
+<img id=dmap src="assets/margin_left/assets_deselected/d_map.png" />
+<img id=bs src="assets/margin_top/banner_sneak.png" />
+<img id=fo src="assets/margin_bottom/assets_deselected/footer.png" />
+<img id=dmd src="assets/margin_bottom/assets_deselected/d_motiondesign.png" />
+<img id=dpr src="assets/margin_bottom/assets_deselected/d_previs.png" />
+<img id=detc src="assets/margin_bottom/assets_deselected/d_etcetera.png" />
+<img id=dpa src="assets/margin_left/assets_deselected/d_partners.png" />
+<img id=con src="assets/margin_left/assets_deselected/contact.png" />
+<img id=se src="assets/margin_top/search.png" />
+<img id=dph src="assets/margin_left/assets_deselected/d_photos.png" />
+<div id=ss_whoweare_1 >
+<img id=img_c1m src="assets/main/C/c01_main.png" >
+<img id=img_cmary src="assets/main/C/c_mary.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='hidden';document.getElementById('ss_whoweare_3').style.visibility='visible';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='hidden';" >
+<img id=img_cgary src="assets/main/C/c_gary.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='hidden';document.getElementById('ss_whoweare_3').style.visibility='hidden';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='visible';document.getElementById('ss_whoweare_4').style.visibility='hidden';" >
+<img id=img_gagr src="assets/main/assets_general/moving/arrow_r_g.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='hidden';document.getElementById('ss_whoweare_3').style.visibility='hidden';document.getElementById('ss_whoweare_2').style.visibility='visible';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='hidden';" >
+</div>
+<div id=ss_whoweare_2 >
+<img id=img_c2m src="assets/main/C/c02_main.png" >
+<img id=img_gagl src="assets/main/assets_general/moving/arrow_l_g.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='visible';document.getElementById('ss_whoweare_3').style.visibility='hidden';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='hidden';" >
+</div>
+<div id=ss_whoweare_3 >
+<img id=img_c3m src="assets/main/C/c03_main.png" >
+<img id=img_gagr_1 src="assets/main/assets_general/moving/arrow_r_g.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='hidden';document.getElementById('ss_whoweare_3').style.visibility='hidden';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='visible';" >
+<img id=img_gxbr src="assets/main/assets_general/stationary/xbox_r.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='visible';document.getElementById('ss_whoweare_3').style.visibility='hidden';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='hidden';" >
+</div>
+<div id=ss_whoweare_4 >
+<img id=img_c4m src="assets/main/C/c04_main.png" >
+<img id=img_gagl_1 src="assets/main/assets_general/moving/arrow_l_g.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='hidden';document.getElementById('ss_whoweare_3').style.visibility='visible';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='hidden';" >
+<img id=img_gxbr_1 src="assets/main/assets_general/stationary/xbox_r.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='visible';document.getElementById('ss_whoweare_3').style.visibility='hidden';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='hidden';" >
+</div>
+<div id=ss_whoweare_5 >
+<img id=img_c5m src="assets/main/C/c05_main.png" >
+<img id=img_gxbr_2 src="assets/main/assets_general/stationary/xbox_r.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='visible';document.getElementById('ss_whoweare_3').style.visibility='hidden';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='hidden';" >
+</div>
+</body></html>
