--- a/newsite/site20/c01.html
+++ b/newsite/site20/c01.html
@@ -1,5 +1,13 @@
 <html><body>
-<style>#dint {
+<style>#line {
+position: absolute;left: 138px;
+top: 239px;
+z-index: 0;
+overflow: hidden;
+border: 0px;
+}
+#line.hover { border: 1px dashed #333; }
+#dint {
 position: absolute;left: 738px;
 top: 560px;
 z-index: 0;
@@ -31,6 +39,15 @@ overflow: hidden;
 border: 0px;
 }
 #logo.hover { border: 1px dashed #333; }
+#conline {
+position: absolute;left: 138px;
+top: 394px;
+z-index: 0;
+overflow: hidden;
+border: 0px;
+visibility: hidden;
+}
+#conline.hover { border: 1px dashed #333; }
 #dwv {
 position: absolute;left: 139px;
 top: 206px;
@@ -79,6 +96,15 @@ overflow: hidden;
 border: 0px;
 }
 #dan.hover { border: 1px dashed #333; }
+#dcomline {
+position: absolute;left: 138px;
+top: 438px;
+z-index: 0;
+overflow: hidden;
+border: 0px;
+visibility: hidden;
+}
+#dcomline.hover { border: 1px dashed #333; }
 #dcl {
 position: absolute;left: 139px;
 top: 292px;
@@ -87,6 +113,15 @@ overflow: hidden;
 border: 0px;
 }
 #dcl.hover { border: 1px dashed #333; }
+#dphline {
+position: absolute;left: 138px;
+top: 282px;
+z-index: 0;
+overflow: hidden;
+border: 0px;
+visibility: hidden;
+}
+#dphline.hover { border: 1px dashed #333; }
 #wo {
 position: absolute;left: 36px;
 top: 528px;
@@ -127,6 +162,15 @@ overflow: hidden;
 border: 0px;
 }
 #bs.hover { border: 1px dashed #333; }
+#dpaline {
+position: absolute;left: 138px;
+top: 260px;
+z-index: 0;
+overflow: hidden;
+border: 0px;
+visibility: hidden;
+}
+#dpaline.hover { border: 1px dashed #333; }
 #fo {
 position: absolute;left: 616px;
 top: 717px;
@@ -151,6 +195,15 @@ overflow: hidden;
 border: 0px;
 }
 #dpr.hover { border: 1px dashed #333; }
+#dwwaline {
+position: absolute;left: 138px;
+top: 239px;
+z-index: 0;
+overflow: hidden;
+border: 0px;
+visibility: hidden;
+}
+#dwwaline.hover { border: 1px dashed #333; }
 #detc {
 position: absolute;left: 968px;
 top: 560px;
@@ -159,6 +212,15 @@ overflow: hidden;
 border: 0px;
 }
 #detc.hover { border: 1px dashed #333; }
+#dcline {
+position: absolute;left: 138px;
+top: 304px;
+z-index: 0;
+overflow: hidden;
+border: 0px;
+visibility: hidden;
+}
+#dcline.hover { border: 1px dashed #333; }
 #dpa {
 position: absolute;left: 139px;
 top: 249px;
@@ -167,6 +229,24 @@ overflow: hidden;
 border: 0px;
 }
 #dpa.hover { border: 1px dashed #333; }
+#dmapline {
+position: absolute;left: 138px;
+top: 416px;
+z-index: 0;
+overflow: hidden;
+border: 0px;
+visibility: hidden;
+}
+#dmapline.hover { border: 1px dashed #333; }
+#dwvline {
+position: absolute;left: 138px;
+top: 217px;
+z-index: 0;
+overflow: hidden;
+border: 0px;
+visibility: hidden;
+}
+#dwvline.hover { border: 1px dashed #333; }
 #con {
 position: absolute;left: 121px;
 top: 339px;
@@ -301,31 +381,40 @@ top: 215px;
 z-index: 1;
 }
 </style>
-<img id=dint src="assets/margin_bottom/assets_deselected/d_interactive.png" />
-<img id=au src="assets/margin_left/assets_deselected/aboutus.png" />
-<img id=swwa src="assets/margin_left/assets_selected/s_whoweare.png" />
-<img id=logo src="assets/margin_left/assets_deselected/logo.png" />
-<img id=dwv src="assets/margin_left/assets_deselected/d_watchvideo.png" />
-<img id=lm src="assets/margin_top/learnmore.png" />
-<img id=ts src="assets/margin_top/text_sneak.png" />
-<img id=dcom src="assets/margin_left/assets_deselected/d_community.png" />
-<img id=td src="assets/margin_top/text_descr.png" />
-<img id=dan src="assets/margin_bottom/assets_deselected/d_animation.png" />
-<img id=dcl src="assets/margin_left/assets_deselected/d_clients.png" />
-<img id=wo src="assets/margin_bottom/assets_deselected/work.png" />
-<img id=bm src="assets/margin_top/banner_margin.png" />
-<img id=dcd src="assets/margin_left/assets_deselected/d_contactdetails.png" />
-<img id=dmap src="assets/margin_left/assets_deselected/d_map.png" />
-<img id=bs src="assets/margin_top/banner_sneak.png" />
-<img id=fo src="assets/margin_bottom/assets_deselected/footer.png" />
-<img id=dmd src="assets/margin_bottom/assets_deselected/d_motiondesign.png" />
-<img id=dpr src="assets/margin_bottom/assets_deselected/d_previs.png" />
-<img id=detc src="assets/margin_bottom/assets_deselected/d_etcetera.png" />
-<img id=dpa src="assets/margin_left/assets_deselected/d_partners.png" />
-<img id=con src="assets/margin_left/assets_deselected/contact.png" />
-<img id=se src="assets/margin_top/search.png" />
-<img id=dph src="assets/margin_left/assets_deselected/d_photos.png" />
-<div id=ss_whoweare_1 >
+<a href="0.html"><img id=line src="assets/main/assets_general/moving/underline.png" onmouseover="" onmouseout=""  />
+</a><a href="m01_1.html"><img id=dint src="assets/margin_bottom/assets_deselected/d_interactive.png" onmouseover="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_selected/s_interactive.png'" onmouseout="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_deselected/d_interactive.png'"  />
+</a><a href="0.html"><img id=au src="assets/margin_left/assets_deselected/aboutus.png" onmouseover="" onmouseout=""  />
+</a><a href="0.html"><img id=swwa src="assets/margin_left/assets_selected/s_whoweare.png" onmouseover="" onmouseout=""  />
+</a><a href="0.html"><img id=logo src="assets/margin_left/assets_deselected/logo.png" onmouseover="" onmouseout=""  />
+</a><a href="0.html"><img id=conline src="assets/main/assets_general/moving/underline.png" onmouseover="" onmouseout=""  />
+</a><a href="b01.html"><img id=dwv src="assets/margin_left/assets_deselected/d_watchvideo.png" onmouseover="document.getElementById('dwvline').style.visibility='visible';document.getElementById('dwvline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dwvline').style.visibility='hidden';"  />
+</a><a href="o01.html"><img id=lm src="assets/margin_top/learnmore.png" onmouseover="" onmouseout=""  />
+</a><a href="o01.html"><img id=ts src="assets/margin_top/text_sneak.png" onmouseover="" onmouseout=""  />
+</a><a href="i01.html"><img id=dcom src="assets/margin_left/assets_deselected/d_community.png" onmouseover="document.getElementById('dcomline').style.visibility='visible';document.getElementById('dcomline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dcomline').style.visibility='hidden';"  />
+</a><a href="o01.html"><img id=td src="assets/margin_top/text_descr.png" onmouseover="" onmouseout=""  />
+</a><a href="k01.html"><img id=dan src="assets/margin_bottom/assets_deselected/d_animation.png" onmouseover="document.getElementById('dan').style.visibility='visible';document.getElementById('dan').src='assets/margin_bottom/assets_selected/s_animation.png'" onmouseout="document.getElementById('dan').style.visibility='visible';document.getElementById('dan').src='assets/margin_bottom/assets_deselected/d_animation.png'"  />
+</a><a href="0.html"><img id=dcomline src="assets/main/assets_general/moving/underline.png" onmouseover="" onmouseout=""  />
+</a><a href="f01.html"><img id=dcl src="assets/margin_left/assets_deselected/d_clients.png" onmouseover="document.getElementById('dcline').style.visibility='visible';document.getElementById('dcline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dcline').style.visibility='hidden';"  />
+</a><a href="0.html"><img id=dphline src="assets/main/assets_general/moving/underline.png" onmouseover="" onmouseout=""  />
+</a><a href="0.html"><img id=wo src="assets/margin_bottom/assets_deselected/work.png" onmouseover="" onmouseout=""  />
+</a><a href="0.html"><img id=bm src="assets/margin_top/banner_margin.png" onmouseover="" onmouseout=""  />
+</a><a href="g01.html"><img id=dcd src="assets/margin_left/assets_deselected/d_contactdetails.png" onmouseover="document.getElementById('conline').style.visibility='visible';document.getElementById('conline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('conline').style.visibility='hidden';"  />
+</a><a href="h01.html"><img id=dmap src="assets/margin_left/assets_deselected/d_map.png" onmouseover="document.getElementById('dmapline').style.visibility='visible';document.getElementById('dmapline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dmapline').style.visibility='hidden';"  />
+</a><a href="o01.html"><img id=bs src="assets/margin_top/banner_sneak.png" onmouseover="" onmouseout=""  />
+</a><a href="0.html"><img id=dpaline src="assets/main/assets_general/moving/underline.png" onmouseover="" onmouseout=""  />
+</a><a href="0.html"><img id=fo src="assets/margin_bottom/assets_deselected/footer.png" onmouseover="" onmouseout=""  />
+</a><a href="l01.html"><img id=dmd src="assets/margin_bottom/assets_deselected/d_motiondesign.png" onmouseover="document.getElementById('dmd').style.visibility='visible';document.getElementById('dmd').src='assets/margin_bottom/assets_selected/s_motiondesign.png'" onmouseout="document.getElementById('dmd').style.visibility='visible';document.getElementById('dmd').src='assets/margin_bottom/assets_deselected/d_motiondesign.png'"  />
+</a><a href="j01.html"><img id=dpr src="assets/margin_bottom/assets_deselected/d_previs.png" onmouseover="document.getElementById('dpr').style.visibility='visible';document.getElementById('dpr').src='assets/margin_bottom/assets_selected/s_previs.png'" onmouseout="document.getElementById('dpr').style.visibility='visible';document.getElementById('dpr').src='assets/margin_bottom/assets_deselected/d_previs.png'"  />
+</a><a href="0.html"><img id=dwwaline src="assets/main/assets_general/moving/underline.png" onmouseover="" onmouseout=""  />
+</a><a href="n01.html"><img id=detc src="assets/margin_bottom/assets_deselected/d_etcetera.png" onmouseover="document.getElementById('detc').style.visibility='visible';document.getElementById('detc').src='assets/margin_bottom/assets_selected/s_etcetera.png'" onmouseout="document.getElementById('detc').style.visibility='visible';document.getElementById('detc').src='assets/margin_bottom/assets_deselected/d_etcetera.png'"  />
+</a><a href="0.html"><img id=dcline src="assets/main/assets_general/moving/underline.png" onmouseover="" onmouseout=""  />
+</a><a href="d01.html"><img id=dpa src="assets/margin_left/assets_deselected/d_partners.png" onmouseover="document.getElementById('dpaline').style.visibility='visible';document.getElementById('dpaline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dpaline').style.visibility='hidden';"  />
+</a><a href="0.html"><img id=dmapline src="assets/main/assets_general/moving/underline.png" onmouseover="" onmouseout=""  />
+</a><a href="0.html"><img id=dwvline src="assets/main/assets_general/moving/underline.png" onmouseover="" onmouseout=""  />
+</a><a href="0.html"><img id=con src="assets/margin_left/assets_deselected/contact.png" onmouseover="" onmouseout=""  />
+</a><a href="0.html"><img id=se src="assets/margin_top/search.png" onmouseover="" onmouseout=""  />
+</a><a href="e01.html"><img id=dph src="assets/margin_left/assets_deselected/d_photos.png" onmouseover="document.getElementById('dphline').style.visibility='visible';document.getElementById('dphline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dphline').style.visibility='hidden';"  />
+</a><div id=ss_whoweare_1 >
 <img id=img_c1m src="assets/main/C/c01_main.png" >
 <img id=img_cmary src="assets/main/C/c_mary.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='hidden';document.getElementById('ss_whoweare_3').style.visibility='visible';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='hidden';" >
 <img id=img_cgary src="assets/main/C/c_gary.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='hidden';document.getElementById('ss_whoweare_3').style.visibility='hidden';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='visible';document.getElementById('ss_whoweare_4').style.visibility='hidden';" >
