--- a/newsite/site21/photos.html
+++ b/newsite/site21/photos.html
@@ -1,8 +1,8 @@
 <html><body>
-<style>#line {
-position: absolute;left: 138px;
-top: 239px;
-z-index: 0;
+<style>#gsbb {
+position: absolute;left: 391px;
+top: 215px;
+z-index: -1;
 overflow: hidden;
 border: 0px;
 }
@@ -20,7 +20,7 @@ z-index: 0;
 overflow: hidden;
 border: 0px;
 }
-#swwa {
+#dwwa {
 position: absolute;left: 139px;
 top: 227px;
 z-index: 0;
@@ -231,159 +231,197 @@ z-index: 0;
 overflow: hidden;
 border: 0px;
 }
-#dph {
+#sph {
 position: absolute;left: 139px;
 top: 270px;
 z-index: 0;
 overflow: hidden;
 border: 0px;
 }
-#ss_whoweare_1 {
- top:0px;
- left:0px;
- visibility:visible;
-}
-#img_c1m {
+#img_Pmain {
 position: absolute;
-left: 406px;
+left: 391px;
+top: 242px;
+z-index: 1;
+visibility: visible;
+}
+#img_Ppe11 {
+position: absolute;
+left: 391px;
 top: 242px;
 z-index: 0;
+visibility: hidden;
 }
-#img_cmary {
+#img_Ppe12 {
 position: absolute;
-left: 939px;
+left: 391px;
 top: 242px;
 z-index: 0;
+visibility: hidden;
 }
-#img_cgary {
-position: absolute;
-left: 939px;
-top: 298px;
-z-index: 0;
-}
-#img_gagr {
-position: absolute;
-left: 880px;
-top: 496px;
-z-index: 1;
-}
-#img_gsbr {
+#img_Ppe13 {
 position: absolute;
 left: 391px;
-top: 215px;
-z-index: 0;
-}
-#ss_whoweare_2 {
- top:0px;
- left:0px;
- visibility:hidden;
-}
-#img_c2m {
-position: absolute;
-left: 406px;
 top: 242px;
 z-index: 0;
+visibility: hidden;
 }
-#img_gagl {
-position: absolute;
-left: 880px;
-top: 496px;
-z-index: 1;
-}
-#img_gsbr_1 {
+#img_Ppe14 {
 position: absolute;
 left: 391px;
-top: 215px;
+top: 242px;
 z-index: 0;
+visibility: hidden;
 }
-#ss_whoweare_3 {
- top:0px;
- left:0px;
- visibility:hidden;
-}
-#img_c3m {
-position: absolute;
-left: 405px;
-top: 240px;
-z-index: 0;
-}
-#img_gagr_1 {
-position: absolute;
-left: 1164px;
-top: 488px;
-z-index: 1;
-}
-#img_gxbr {
-position: absolute;
-left: 1171px;
-top: 215px;
-z-index: 1;
-}
-#img_gsbr2 {
+#img_Ppe15 {
 position: absolute;
 left: 391px;
-top: 215px;
+top: 242px;
 z-index: 0;
+visibility: hidden;
 }
-#ss_whoweare_4 {
- top:0px;
- left:0px;
- visibility:hidden;
-}
-#img_c4m {
-position: absolute;
-left: 405px;
-top: 240px;
-z-index: 0;
-}
-#img_gagl_1 {
-position: absolute;
-left: 1164px;
-top: 488px;
-z-index: 1;
-}
-#img_gxbr_1 {
-position: absolute;
-left: 1171px;
-top: 215px;
-z-index: 1;
-}
-#img_gsbr2_1 {
+#img_Ppe16 {
 position: absolute;
 left: 391px;
-top: 215px;
+top: 242px;
 z-index: 0;
+visibility: hidden;
 }
-#ss_whoweare_5 {
- top:0px;
- left:0px;
- visibility:hidden;
-}
-#img_c5m {
-position: absolute;
-left: 405px;
-top: 240px;
-z-index: 0;
-}
-#img_gxbr_2 {
-position: absolute;
-left: 1171px;
-top: 215px;
-z-index: 1;
-}
-#img_gsbr2_2 {
+#img_Ppe17 {
 position: absolute;
 left: 391px;
-top: 215px;
+top: 242px;
 z-index: 0;
+visibility: hidden;
+}
+#img_Ppe18 {
+position: absolute;
+left: 391px;
+top: 242px;
+z-index: 0;
+visibility: hidden;
+}
+#img_Pte111 {
+position: absolute;
+left: 791px;
+top: 242px;
+z-index: 0;
+visibility: visible;
+}
+#img_Pte121 {
+position: absolute;
+left: 884px;
+top: 242px;
+z-index: 0;
+visibility: visible;
+}
+#img_Pte131 {
+position: absolute;
+left: 977px;
+top: 242px;
+z-index: 0;
+visibility: visible;
+}
+#img_Pte141 {
+position: absolute;
+left: 1070px;
+top: 242px;
+z-index: 0;
+visibility: visible;
+}
+#img_Pte151 {
+position: absolute;
+left: 790px;
+top: 334px;
+z-index: 0;
+visibility: visible;
+}
+#img_Pte161 {
+position: absolute;
+left: 884px;
+top: 334px;
+z-index: 0;
+visibility: visible;
+}
+#img_Pte171 {
+position: absolute;
+left: 977px;
+top: 334px;
+z-index: 0;
+visibility: visible;
+}
+#img_Pte181 {
+position: absolute;
+left: 1070px;
+top: 334px;
+z-index: 0;
+visibility: visible;
+}
+#img_Pte112 {
+position: absolute;
+left: 790px;
+top: 242px;
+z-index: 0;
+visibility: hidden;
+}
+#img_Pte122 {
+position: absolute;
+left: 884px;
+top: 242px;
+z-index: 0;
+visibility: hidden;
+}
+#img_Pte132 {
+position: absolute;
+left: 977px;
+top: 242px;
+z-index: 0;
+visibility: hidden;
+}
+#img_Pte142 {
+position: absolute;
+left: 1070px;
+top: 242px;
+z-index: 0;
+visibility: hidden;
+}
+#img_Pte152 {
+position: absolute;
+left: 790px;
+top: 334px;
+z-index: 0;
+visibility: hidden;
+}
+#img_Pte162 {
+position: absolute;
+left: 884px;
+top: 334px;
+z-index: 0;
+visibility: hidden;
+}
+#img_Pte172 {
+position: absolute;
+left: 977px;
+top: 334px;
+z-index: 0;
+visibility: hidden;
+}
+#img_Pte182 {
+position: absolute;
+left: 1070px;
+top: 334px;
+z-index: 0;
+visibility: hidden;
 }
 </style>
-<img id=line src="assets/main/assets_general/moving/underline.png" />
+<img id=gsbb src="assets/main/assets_general/stationary/semiborder_b.png" />
 <a href="m01_1.html">
 <img id=dint src="assets/margin_bottom/assets_deselected/d_interactive.png" onmouseover="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_selected/s_interactive.png'" onmouseout="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_deselected/d_interactive.png'"  />
 </a>
 <img id=au src="assets/margin_left/assets_deselected/aboutus.png" />
-<img id=swwa src="assets/margin_left/assets_selected/s_whoweare.png" />
+<a href="whoweare.html">
+<img id=dwwa src="assets/margin_left/assets_deselected/d_whoweare.png" onmouseover="document.getElementById('dwwaline').style.visibility='visible';document.getElementById('dwwaline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dwwaline').style.visibility='hidden';"  />
+</a>
 <img id=logo src="assets/margin_left/assets_deselected/logo.png" />
 <img id=conline src="assets/main/assets_general/moving/underline.png" />
 <a href="home.html">
@@ -440,36 +478,30 @@ z-index: 0;
 <img id=dwvline src="assets/main/assets_general/moving/underline.png" />
 <img id=con src="assets/margin_left/assets_deselected/contact.png" />
 <img id=se src="assets/margin_top/search.png" />
-<a href="photos.html">
-<img id=dph src="assets/margin_left/assets_deselected/d_photos.png" onmouseover="document.getElementById('dphline').style.visibility='visible';document.getElementById('dphline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dphline').style.visibility='hidden';"  />
-</a>
-<div id=ss_whoweare_1 >
-<img id=img_c1m src="assets/main/C/c01_main.png" onmouseover="" onmouseout="" >
-<img id=img_cmary src="assets/main/C/c_mary.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='hidden';document.getElementById('ss_whoweare_3').style.visibility='visible';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='hidden';" onmouseover="" onmouseout="" >
-<img id=img_cgary src="assets/main/C/c_gary.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='hidden';document.getElementById('ss_whoweare_3').style.visibility='hidden';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='visible';document.getElementById('ss_whoweare_4').style.visibility='hidden';" onmouseover="" onmouseout="" >
-<img id=img_gagr src="assets/main/assets_general/moving/arrow_r_g.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='hidden';document.getElementById('ss_whoweare_3').style.visibility='hidden';document.getElementById('ss_whoweare_2').style.visibility='visible';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='hidden';" onmouseover="" onmouseout="" >
-<img id=img_gsbr src="assets/main/assets_general/stationary/semiborder_r.png" onmouseover="" onmouseout="" >
-</div>
-<div id=ss_whoweare_2 >
-<img id=img_c2m src="assets/main/C/c02_main.png" onmouseover="" onmouseout="" >
-<img id=img_gagl src="assets/main/assets_general/moving/arrow_l_g.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='visible';document.getElementById('ss_whoweare_3').style.visibility='hidden';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='hidden';" onmouseover="" onmouseout="" >
-<img id=img_gsbr_1 src="assets/main/assets_general/stationary/semiborder_r.png" onmouseover="" onmouseout="" >
-</div>
-<div id=ss_whoweare_3 >
-<img id=img_c3m src="assets/main/C/c03_main.png" onmouseover="" onmouseout="" >
-<img id=img_gagr_1 src="assets/main/assets_general/moving/arrow_r_g.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='hidden';document.getElementById('ss_whoweare_3').style.visibility='hidden';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='visible';" onmouseover="" onmouseout="" >
-<img id=img_gxbr src="assets/main/assets_general/stationary/xbox_r.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='visible';document.getElementById('ss_whoweare_3').style.visibility='hidden';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='hidden';" onmouseover="" onmouseout="" >
-<img id=img_gsbr2 src="assets/main/assets_general/stationary/semiborder_r_2.png" onmouseover="" onmouseout="" >
-</div>
-<div id=ss_whoweare_4 >
-<img id=img_c4m src="assets/main/C/c04_main.png" onmouseover="" onmouseout="" >
-<img id=img_gagl_1 src="assets/main/assets_general/moving/arrow_l_g.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='hidden';document.getElementById('ss_whoweare_3').style.visibility='visible';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='hidden';" onmouseover="" onmouseout="" >
-<img id=img_gxbr_1 src="assets/main/assets_general/stationary/xbox_r.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='visible';document.getElementById('ss_whoweare_3').style.visibility='hidden';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='hidden';" onmouseover="" onmouseout="" >
-<img id=img_gsbr2_1 src="assets/main/assets_general/stationary/semiborder_r_2.png" onmouseover="" onmouseout="" >
-</div>
-<div id=ss_whoweare_5 >
-<img id=img_c5m src="assets/main/C/c05_main.png" onmouseover="" onmouseout="" >
-<img id=img_gxbr_2 src="assets/main/assets_general/stationary/xbox_r.png" onclick="document.getElementById('ss_whoweare_1').style.visibility='visible';document.getElementById('ss_whoweare_3').style.visibility='hidden';document.getElementById('ss_whoweare_2').style.visibility='hidden';document.getElementById('ss_whoweare_5').style.visibility='hidden';document.getElementById('ss_whoweare_4').style.visibility='hidden';" onmouseover="" onmouseout="" >
-<img id=img_gsbr2_2 src="assets/main/assets_general/stationary/semiborder_r_2.png" onmouseover="" onmouseout="" >
-</div>
+<img id=sph src="assets/margin_left/assets_selected/s_photos.png" />
+<img id=img_Pmain src="../phil_assets/about us/photos/1axe.png" onmouseover="" onmouseout="" >
+<img id=img_Ppe11 src="../phil_assets/about us/photos/1axe.png" onmouseover="" onmouseout="" >
+<img id=img_Ppe12 src="../phil_assets/about us/photos/2mocap.png" onmouseover="" onmouseout="" >
+<img id=img_Ppe13 src="../phil_assets/about us/photos/3Panorama.png" onmouseover="" onmouseout="" >
+<img id=img_Ppe14 src="../phil_assets/about us/photos/4suite.png" onmouseover="" onmouseout="" >
+<img id=img_Ppe15 src="../phil_assets/about us/photos/5illustrators.png" onmouseover="" onmouseout="" >
+<img id=img_Ppe16 src="../phil_assets/about us/photos/6meeting.png" onmouseover="" onmouseout="" >
+<img id=img_Ppe17 src="../phil_assets/about us/photos/7office.png" onmouseover="" onmouseout="" >
+<img id=img_Ppe18 src="../phil_assets/about us/photos/8inspirationboard.png" onmouseover="" onmouseout="" >
+<img id=img_Pte111 src="../phil_assets/about us/photos/1axe_BW.png" onclick="document.getElementById('img_Pmain').src='../phil_assets/about us/photos/1axe.png';document.getElementById('img_Pmain').style.visibility='visible';" onmouseover="document.getElementById('img_Pte111').style.visibility='visible';document.getElementById('img_Pte111').src='../phil_assets/about us/photos/1axe_red.png'" onmouseout="document.getElementById('img_Pte111').style.visibility='visible';document.getElementById('img_Pte111').src='../phil_assets/about us/photos/1axe_BW.png'" >
+<img id=img_Pte121 src="../phil_assets/about us/photos/2mocap_BW.png" onclick="document.getElementById('img_Pmain').src='../phil_assets/about us/photos/2mocap.png';document.getElementById('img_Pmain').style.visibility='visible';" onmouseover="document.getElementById('img_Pte121').style.visibility='visible';document.getElementById('img_Pte121').src='../phil_assets/about us/photos/2mocap_red.png'" onmouseout="document.getElementById('img_Pte121').style.visibility='visible';document.getElementById('img_Pte121').src='../phil_assets/about us/photos/2mocap_BW.png'" >
+<img id=img_Pte131 src="../phil_assets/about us/photos/3Panorama_BW.png" onclick="document.getElementById('img_Pmain').src='../phil_assets/about us/photos/3Panorama.png';document.getElementById('img_Pmain').style.visibility='visible';" onmouseover="document.getElementById('img_Pte131').style.visibility='visible';document.getElementById('img_Pte131').src='../phil_assets/about us/photos/3Panorama_red.png'" onmouseout="document.getElementById('img_Pte131').style.visibility='visible';document.getElementById('img_Pte131').src='../phil_assets/about us/photos/3Panorama_BW.png'" >
+<img id=img_Pte141 src="../phil_assets/about us/photos/4suite_BW.png" onclick="document.getElementById('img_Pmain').src='../phil_assets/about us/photos/4suite.png';document.getElementById('img_Pmain').style.visibility='visible';" onmouseover="document.getElementById('img_Pte141').style.visibility='visible';document.getElementById('img_Pte141').src='../phil_assets/about us/photos/4suite_red.png'" onmouseout="document.getElementById('img_Pte141').style.visibility='visible';document.getElementById('img_Pte141').src='../phil_assets/about us/photos/4suite_BW.png'" >
+<img id=img_Pte151 src="../phil_assets/about us/photos/5illustrators_BW.png" onclick="document.getElementById('img_Pmain').src='../phil_assets/about us/photos/5illustrators.png';document.getElementById('img_Pmain').style.visibility='visible';" onmouseover="document.getElementById('img_Pte151').style.visibility='visible';document.getElementById('img_Pte151').src='../phil_assets/about us/photos/5illustrators_red.png'" onmouseout="document.getElementById('img_Pte151').style.visibility='visible';document.getElementById('img_Pte151').src='../phil_assets/about us/photos/5illustrators_BW.png'" >
+<img id=img_Pte161 src="../phil_assets/about us/photos/6meeting_BW.png" onclick="document.getElementById('img_Pmain').src='../phil_assets/about us/photos/6meeting.png';document.getElementById('img_Pmain').style.visibility='visible';" onmouseover="document.getElementById('img_Pte161').style.visibility='visible';document.getElementById('img_Pte161').src='../phil_assets/about us/photos/6meeting_red.png'" onmouseout="document.getElementById('img_Pte161').style.visibility='visible';document.getElementById('img_Pte161').src='../phil_assets/about us/photos/6meeting_BW.png'" >
+<img id=img_Pte171 src="../phil_assets/about us/photos/7office_BW.png" onclick="document.getElementById('img_Pmain').src='../phil_assets/about us/photos/7office.png';document.getElementById('img_Pmain').style.visibility='visible';" onmouseover="document.getElementById('img_Pte171').style.visibility='visible';document.getElementById('img_Pte171').src='../phil_assets/about us/photos/7office_red.png'" onmouseout="document.getElementById('img_Pte171').style.visibility='visible';document.getElementById('img_Pte171').src='../phil_assets/about us/photos/7office_BW.png'" >
+<img id=img_Pte181 src="../phil_assets/about us/photos/8inspirationboard_BW.png" onclick="document.getElementById('img_Pmain').src='../phil_assets/about us/photos/8inspirationboard.png';document.getElementById('img_Pmain').style.visibility='visible';" onmouseover="document.getElementById('img_Pte181').style.visibility='visible';document.getElementById('img_Pte181').src='../phil_assets/about us/photos/8inspirationboard_red.png'" onmouseout="document.getElementById('img_Pte181').style.visibility='visible';document.getElementById('img_Pte181').src='../phil_assets/about us/photos/8inspirationboard_BW.png'" >
+<img id=img_Pte112 src="../phil_assets/about us/photos/1axe_red.png" onmouseover="" onmouseout="" >
+<img id=img_Pte122 src="../phil_assets/about us/photos/2mocap_red.png" onmouseover="" onmouseout="" >
+<img id=img_Pte132 src="../phil_assets/about us/photos/3Panorama_red.png" onmouseover="" onmouseout="" >
+<img id=img_Pte142 src="../phil_assets/about us/photos/4suite_red.png" onmouseover="" onmouseout="" >
+<img id=img_Pte152 src="../phil_assets/about us/photos/5illustrators_red.png" onmouseover="" onmouseout="" >
+<img id=img_Pte162 src="../phil_assets/about us/photos/6meeting_red.png" onmouseover="" onmouseout="" >
+<img id=img_Pte172 src="../phil_assets/about us/photos/7office_red.png" onmouseover="" onmouseout="" >
+<img id=img_Pte182 src="../phil_assets/about us/photos/8inspirationboard_red.png" onmouseover="" onmouseout="" >
 </body></html>
