--- a/newsite/site21/map.html
+++ b/newsite/site21/map.html
@@ -1,5 +1,12 @@
 <html><body>
-<style>#dint {
+<style>#gsbb {
+position: absolute;left: 391px;
+top: 215px;
+z-index: -1;
+overflow: hidden;
+border: 0px;
+}
+#dint {
 position: absolute;left: 735px;
 top: 558px;
 z-index: 0;
@@ -35,7 +42,7 @@ overflow: hidden;
 border: 0px;
 visibility: hidden;
 }
-#swv {
+#dwv {
 position: absolute;left: 139px;
 top: 206px;
 z-index: 0;
@@ -121,7 +128,7 @@ z-index: 0;
 overflow: hidden;
 border: 0px;
 }
-#dmap {
+#smap {
 position: absolute;left: 139px;
 top: 405px;
 z-index: 0;
@@ -231,12 +238,14 @@ z-index: 0;
 overflow: hidden;
 border: 0px;
 }
-#mov_home_reel {
+#img_map {
 position: absolute;
-left: 391px;
-top: 212px;
+left: 392px;
+top: 233px;
+z-index: 0;
 }
 </style>
+<img id=gsbb src="assets/main/assets_general/stationary/semiborder_b.png" />
 <a href="m01_1.html">
 <img id=dint src="assets/margin_bottom/assets_deselected/d_interactive.png" onmouseover="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_selected/s_interactive.png'" onmouseout="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_deselected/d_interactive.png'"  />
 </a>
@@ -246,7 +255,9 @@ top: 212px;
 </a>
 <img id=logo src="assets/margin_left/assets_deselected/logo.png" />
 <img id=conline src="assets/main/assets_general/moving/underline.png" />
-<img id=swv src="assets/margin_left/assets_selected/s_watchvideo.png" />
+<a href="home.html">
+<img id=dwv src="assets/margin_left/assets_deselected/d_watchvideo.png" onmouseover="document.getElementById('dwvline').style.visibility='visible';document.getElementById('dwvline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dwvline').style.visibility='hidden';"  />
+</a>
 <a href="sneakpeek.html">
 <img id=lm src="assets/margin_top/learnmore.png" />
 </a>
@@ -272,9 +283,7 @@ top: 212px;
 <a href="contacts.html">
 <img id=dcd src="assets/margin_left/assets_deselected/d_contactdetails.png" onmouseover="document.getElementById('conline').style.visibility='visible';document.getElementById('conline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('conline').style.visibility='hidden';"  />
 </a>
-<a href="map.html">
-<img id=dmap src="assets/margin_left/assets_deselected/d_map.png" onmouseover="document.getElementById('dmapline').style.visibility='visible';document.getElementById('dmapline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dmapline').style.visibility='hidden';"  />
-</a>
+<img id=smap src="assets/margin_left/assets_selected/s_map.png" />
 <a href="sneakpeek.html">
 <img id=bs src="assets/margin_top/banner_sneak.png" />
 </a>
@@ -301,5 +310,5 @@ top: 212px;
 <a href="photos.html">
 <img id=dph src="assets/margin_left/assets_deselected/d_photos.png" onmouseover="document.getElementById('dphline').style.visibility='visible';document.getElementById('dphline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dphline').style.visibility='hidden';"  />
 </a>
-<video controls id=mov_home_reel poster="assets/main/B/b01_main.png" ><source src="../phil_assets/Home Page/homePage_reel.mov" /></video>
+<img id=img_map src="assets/main/H/h01_main.png" onmouseover="" onmouseout="" >
 </body></html>
