--- a/newsite/site21/partners.html
+++ b/newsite/site21/partners.html
@@ -1,5 +1,12 @@
 <html><body>
-<style>#dint {
+<style>#gxbb {
+position: absolute;left: 1171px;
+top: 215px;
+z-index: 0;
+overflow: hidden;
+border: 0px;
+}
+#dint {
 position: absolute;left: 735px;
 top: 558px;
 z-index: 0;
@@ -35,7 +42,7 @@ overflow: hidden;
 border: 0px;
 visibility: hidden;
 }
-#swv {
+#dwv {
 position: absolute;left: 139px;
 top: 206px;
 z-index: 0;
@@ -187,7 +194,7 @@ overflow: hidden;
 border: 0px;
 visibility: hidden;
 }
-#dpa {
+#spa {
 position: absolute;left: 139px;
 top: 249px;
 z-index: 0;
@@ -231,12 +238,52 @@ z-index: 0;
 overflow: hidden;
 border: 0px;
 }
-#mov_home_reel {
+#img_d4c {
 position: absolute;
 left: 391px;
-top: 212px;
+top: 180px;
+z-index: 0;
+visibility: hidden;
+}
+#img_d4d {
+position: absolute;
+left: 533px;
+top: 180px;
+z-index: 0;
+visibility: hidden;
+}
+#img_d4m {
+position: absolute;
+left: 391px;
+top: 215px;
+z-index: 0;
+visibility: hidden;
+}
+#img_d1c {
+position: absolute;
+left: 391px;
+top: 180px;
+z-index: 0;
+visibility: visible;
+}
+#img_d1d {
+position: absolute;
+left: 533px;
+top: 180px;
+z-index: 0;
+visibility: visible;
+}
+#img_d1m {
+position: absolute;
+left: 402px;
+top: 243px;
+z-index: 0;
+visibility: visible;
 }
 </style>
+<a href="link.html">
+<img id=gxbb src="assets/main/assets_general/stationary/xbox_b.png" />
+</a>
 <a href="m01_1.html">
 <img id=dint src="assets/margin_bottom/assets_deselected/d_interactive.png" onmouseover="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_selected/s_interactive.png'" onmouseout="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_deselected/d_interactive.png'"  />
 </a>
@@ -246,7 +293,9 @@ top: 212px;
 </a>
 <img id=logo src="assets/margin_left/assets_deselected/logo.png" />
 <img id=conline src="assets/main/assets_general/moving/underline.png" />
-<img id=swv src="assets/margin_left/assets_selected/s_watchvideo.png" />
+<a href="home.html">
+<img id=dwv src="assets/margin_left/assets_deselected/d_watchvideo.png" onmouseover="document.getElementById('dwvline').style.visibility='visible';document.getElementById('dwvline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dwvline').style.visibility='hidden';"  />
+</a>
 <a href="sneakpeek.html">
 <img id=lm src="assets/margin_top/learnmore.png" />
 </a>
@@ -291,9 +340,7 @@ top: 212px;
 <img id=detc src="assets/margin_bottom/assets_deselected/d_etcetera.png" onmouseover="document.getElementById('detc').style.visibility='visible';document.getElementById('detc').src='assets/margin_bottom/assets_selected/s_etcetera.png'" onmouseout="document.getElementById('detc').style.visibility='visible';document.getElementById('detc').src='assets/margin_bottom/assets_deselected/d_etcetera.png'"  />
 </a>
 <img id=dcline src="assets/main/assets_general/moving/underline.png" />
-<a href="partners.html">
-<img id=dpa src="assets/margin_left/assets_deselected/d_partners.png" onmouseover="document.getElementById('dpaline').style.visibility='visible';document.getElementById('dpaline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dpaline').style.visibility='hidden';"  />
-</a>
+<img id=spa src="assets/margin_left/assets_selected/s_partners.png" />
 <img id=dmapline src="assets/main/assets_general/moving/underline.png" />
 <img id=dwvline src="assets/main/assets_general/moving/underline.png" />
 <img id=con src="assets/margin_left/assets_deselected/contact.png" />
@@ -301,5 +348,10 @@ top: 212px;
 <a href="photos.html">
 <img id=dph src="assets/margin_left/assets_deselected/d_photos.png" onmouseover="document.getElementById('dphline').style.visibility='visible';document.getElementById('dphline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dphline').style.visibility='hidden';"  />
 </a>
-<video controls id=mov_home_reel poster="assets/main/B/b01_main.png" ><source src="../phil_assets/Home Page/homePage_reel.mov" /></video>
+<img id=img_d4c src="assets/main/D/d04_c2d.png" onclick="document.getElementById('img_d4c').style.visibility='hidden';document.getElementById('img_d4d').style.visibility='hidden';document.getElementById('img_d4m').style.visibility='hidden';document.getElementById('img_d1c').style.visibility='visible';document.getElementById('img_d1d').style.visibility='visible';document.getElementById('img_d1m').style.visibility='visible';" onmouseover="" onmouseout="" >
+<img id=img_d4d src="assets/main/D/d04_directors.png" onmouseover="" onmouseout="" >
+<img id=img_d4m src="assets/main/D/d04_main.png" onmouseover="" onmouseout="" >
+<img id=img_d1c src="assets/main/D/d01_c2d.png" onmouseover="" onmouseout="" >
+<img id=img_d1d src="assets/main/D/d01_directors.png" onclick="document.getElementById('img_d4c').style.visibility='visible';document.getElementById('img_d4d').style.visibility='visible';document.getElementById('img_d4m').style.visibility='visible';document.getElementById('img_d1c').style.visibility='hidden';document.getElementById('img_d1d').style.visibility='hidden';document.getElementById('img_d1m').style.visibility='hidden';" onmouseover="" onmouseout="" >
+<img id=img_d1m src="assets/main/D/d01_main.png" onmouseover="" onmouseout="" >
 </body></html>
