--- a/newsite/site21/sneakpeek.html
+++ b/newsite/site21/sneakpeek.html
@@ -242,6 +242,7 @@ border: 0px;
 position: absolute;
 left: 415px;
 top: 235px;
+z-index: 0;
 }
 </style>
 <img id=gsbb src="assets/main/assets_general/stationary/semiborder_b.png" />
@@ -263,7 +264,7 @@ top: 235px;
 <a href="sneakpeek.html">
 <img id=ts src="assets/margin_top/text_sneak.png" />
 </a>
-<a href="i01.html">
+<a href="community.html">
 <img id=dcom src="assets/margin_left/assets_deselected/d_community.png" onmouseover="document.getElementById('dcomline').style.visibility='visible';document.getElementById('dcomline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dcomline').style.visibility='hidden';"  />
 </a>
 <a href="sneakpeek.html">
@@ -273,16 +274,16 @@ top: 235px;
 <img id=dan src="assets/margin_bottom/assets_deselected/d_animation.png" onmouseover="document.getElementById('dan').style.visibility='visible';document.getElementById('dan').src='assets/margin_bottom/assets_selected/s_animation.png'" onmouseout="document.getElementById('dan').style.visibility='visible';document.getElementById('dan').src='assets/margin_bottom/assets_deselected/d_animation.png'"  />
 </a>
 <img id=dcomline src="assets/main/assets_general/moving/underline.png" />
-<a href="f01.html">
+<a href="clients.html">
 <img id=dcl src="assets/margin_left/assets_deselected/d_clients.png" onmouseover="document.getElementById('dcline').style.visibility='visible';document.getElementById('dcline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dcline').style.visibility='hidden';"  />
 </a>
 <img id=dphline src="assets/main/assets_general/moving/underline.png" />
 <img id=wo src="assets/margin_bottom/assets_deselected/work.png" />
 <img id=bm src="assets/margin_top/banner_margin.png" />
-<a href="g01.html">
+<a href="contacts.html">
 <img id=dcd src="assets/margin_left/assets_deselected/d_contactdetails.png" onmouseover="document.getElementById('conline').style.visibility='visible';document.getElementById('conline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('conline').style.visibility='hidden';"  />
 </a>
-<a href="h01.html">
+<a href="map.html">
 <img id=dmap src="assets/margin_left/assets_deselected/d_map.png" onmouseover="document.getElementById('dmapline').style.visibility='visible';document.getElementById('dmapline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dmapline').style.visibility='hidden';"  />
 </a>
 <a href="sneakpeek.html">
@@ -301,15 +302,15 @@ top: 235px;
 <img id=detc src="assets/margin_bottom/assets_deselected/d_etcetera.png" onmouseover="document.getElementById('detc').style.visibility='visible';document.getElementById('detc').src='assets/margin_bottom/assets_selected/s_etcetera.png'" onmouseout="document.getElementById('detc').style.visibility='visible';document.getElementById('detc').src='assets/margin_bottom/assets_deselected/d_etcetera.png'"  />
 </a>
 <img id=dcline src="assets/main/assets_general/moving/underline.png" />
-<a href="d01.html">
+<a href="partners.html">
 <img id=dpa src="assets/margin_left/assets_deselected/d_partners.png" onmouseover="document.getElementById('dpaline').style.visibility='visible';document.getElementById('dpaline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dpaline').style.visibility='hidden';"  />
 </a>
 <img id=dmapline src="assets/main/assets_general/moving/underline.png" />
 <img id=dwvline src="assets/main/assets_general/moving/underline.png" />
 <img id=con src="assets/margin_left/assets_deselected/contact.png" />
 <img id=se src="assets/margin_top/search.png" />
-<a href="e01.html">
+<a href="photos.html">
 <img id=dph src="assets/margin_left/assets_deselected/d_photos.png" onmouseover="document.getElementById('dphline').style.visibility='visible';document.getElementById('dphline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dphline').style.visibility='hidden';"  />
 </a>
-<img id=img_sneakpeek src="assets/main/O/o01_tempmain.png" >
+<img id=img_sneakpeek src="assets/main/O/o01_tempmain.png" onmouseover="" onmouseout="" >
 </body></html>
